@@ -1,0 +1,27 @@
+# -*- coding: utf-8 -*-
+# Copyright (C) 2010 Bastian Kleineidam
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+"""Archive commands for the zip program."""
+
+def create_zip (archive, encoding, cmd, *args, **kwargs):
+    """Create a ZIP archive."""
+    cmdlist = [cmd]
+    # XXX if archive already exists, use zip -u (update)?
+    cmdlist.append('-r')
+    if kwargs['verbose']:
+        cmdlist.append('--verbose')
+    cmdlist.append(archive)
+    cmdlist.extend(args)
+    return cmdlist
