@@ -1,7 +1,8 @@
 0.4 "" (released xx.xx.2010)
 
-  * Improved listing of available archive formats.
   * Added support for Windows systems.
+  * Added support for creating ZIP files.
+  * Improved listing of available archive formats.
   * Improved recognition of MIME types.
 
 0.3 "Management" (released 23.2.2010)
